<resources>
    <string name="app_name">StoryApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="greeting">Hello %1$s,</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="description">Description</string>
    <string name="upload_story">Upload Story</string>
    <string name="empty_image_warning">Image cannot be empty</string>
    <string name="desc">Desc</string>
    <string name="detail_image">Detail Image</string>
    <string name="yogyakarta">Yogyakarta</string>
    <string name="ugm">Universitas Gadjah Mada</string>
    <string name="image">image</string>
    <string name="dicoding_story_app">Story App</string>
    <string name="signup">Register</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">Want to update your activities? just on StoryApp!</string>
    <string name="title_welcome_page">Welcome to StoryApp!</string>
    <string name="title_signup_page">Complete your data below</string>
    <string name="message_login_page">Enter your data first</string>
    <string name="title_login_page">Are you ready to update your story?</string>
    <string name="message_main_page">Happy Using StoryApp</string>
    <string name="logout">Out</string>
    <string name="error">Password must not be less than 8 characters</string>
    <string name="error_email">Invalid email!</string>
    <string name="settings">SETTINGS</string>
    <string name="about">ABOUT</string>
    <string name="exit">EXIT</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="title_activity_maps">Map</string>
    <string name="maps">Map</string>
</resources>