<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:cardElevation="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_item_photo"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:src="@drawable/ugm"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image" />

            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ugm"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tv_detail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yogyakarta"
                android:textSize="15sp"
                android:maxLines="1"
                android:layout_marginTop="5dp"
                android:layout_marginStart="15dp"
                android:textColor="@color/navy"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>