<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.camera.UploadActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/previewImageView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:srcCompat="@drawable/baseline_image_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cameraButton"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="10dp"
                android:text="@string/camera" />

            <Button
                android:id="@+id/galleryButton"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/gallery" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LayoutDesc"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="15dp"
            android:gravity="top"
            tools:alpha="100">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDesc"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:ems="10"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/uploadButton"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:text="@string/upload" />

    </LinearLayout>

</ScrollView>